feat: CRA with TypeScript feat: FavIcon refactor: App and tests feat: ReadMe fix: Version updated

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App header {
+  background-color: #444;
+  text-align: center;
+  padding: 2rem 0;
+  color: #ddd;
+  font-size: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App main {
+  font-size: 1.5rem;
+  padding: 1.5rem 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App footer {
+  background-color: #888;
+  padding: 0.5rem 0;
+  text-align: center;
+  color: #ddd;
 }
 
-.App-link {
-  color: #61dafb;
+.App footer a {
+  color: #ddd;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App footer a:hover {
+  color: #fff;
+  text-decoration: underline;
 }
